--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -5,10 +5,20 @@
   "author": "Prosopo",
   "private": true,
   "engines": {
-    "node": ">=8.2.0",
-    "yarn": "^1.10.1"
+    "node": ">=8.2.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "build": "yarn workspaces build"
+  },
+  "packageManager": "yarn@3.1.1",
+  "resolutions": {
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/find-up": "^4.0.0"
+  }
 }
