--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -7,23 +7,47 @@
     "type": "git",
     "url": "https://github.com/prosopo-io/provider.git"
   },
-  "type": "module",
   "private": true,
   "engines": {
     "node": ">=8.2.0"
   },
   "workspaces": [
-    "packages/*"
+    "packages/contract",
+    "packages/core"
   ],
   "scripts": {
-    "build": "yarn workspaces build"
+    "build": "yarn tsc -b --verbose",
+    "dev": "yarn build && yarn setup && yarn start",
+    "start": "cd build && node ./src/cli/cli.js",
+    "setup": "cd build && node ./scripts/setupdev.js",
+    "mnemonic": "cd build && node ./scripts/generateMnemonic.js",
+    "test": "yarn redspot test",
+    "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "packageManager": "yarn@3.1.1",
   "resolutions": {
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "@polkadot/api": "7.5.1",
+    "@polkadot/api-contract": "7.5.1",
+    "@polkadot/types": "7.5.1",
+    "@polkadot/types-known": "7.5.1",
+    "@polkadot/keyring": "8.3.3",
+    "@polkadot/util": "8.3.3",
+    "@polkadot/wasm-crypto": "4.5.1",
+    "@polkadot/util-crypto": "8.3.3",
+    "@types/yargs": "^17.0.6",
+    "bn.js": "^4.12",
+    "dotenv": "^14.3.2",
+    "yargs": "^17.3.1",
+    "mocha": "8.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/find-up": "^4.0.0"
+    "@types/find-up": "^4.0.0",
+    "eslint-plugin-react": "latest",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
