--- a/packages/provider/packages/contract/package.json
+++ b/packages/provider/packages/contract/package.json
@@ -4,12 +4,11 @@
   "license": "GPL-3.0",
   "packageManager": "yarn@3.0.1",
   "private": true,
-  "sideEffects": false,
-  "module": "true",
-  "type": "module",
   "version": "1.0.0",
-  "scripts": {
-    "build": "tsc --build ./"
+  "main": "index.js",
+  "type": "module",
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
     "@polkadot/api": "7.5.1",
@@ -28,13 +27,9 @@
     "@redspot/patract": "file:../../../redspot/build/redspot-patract",
     "@redspot/watcher": "file:../../../redspot/build/redspot-watcher",
     "redspot": "file:../../../redspot/build/redspot-core",
-    "typescript": "^4.5.5",
     "zod": "^3.11.6"
   },
   "devDependencies": {
     "@polkadot/dev": "^0.65.46"
-  },
-  "resolutions": {
-    "typescript": "^4.5.5"
   }
 }
