--- a/packages/provider/packages/contract/tsconfig.json
+++ b/packages/provider/packages/contract/tsconfig.json
@@ -1,3 +1,18 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+
+  "compilerOptions": {
+    "baseUrl": "..",
+    "outDir": "./build",
+    "rootDir": "./src",
+    "emitDeclarationOnly": false,
+    "resolveJsonModule": true,
+    "noEmit": false
+  },
+  "include": [
+    "src"
+  ],
+  "references": [
+
+  ]
 }
