--- a/packages/provider/packages/contract/package.json
+++ b/packages/provider/packages/contract/package.json
@@ -10,6 +10,9 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "scripts": {
+    "build": "yarn tsc -b --verbose"
+  },
   "dependencies": {
     "@polkadot/api": "7.5.1",
     "@polkadot/api-contract": "7.5.1",
@@ -30,6 +33,34 @@
     "zod": "^3.11.6"
   },
   "devDependencies": {
-    "@polkadot/dev": "^0.65.46"
+    "@polkadot/dev": "^0.65.46",
+    "@rushstack/eslint-patch": "^1.0.6",
+    "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.13",
+    "@types/find-up": "^4.0.0",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "chai": "^4.3.4",
+    "dotenv": "^14.3.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-newlines": "^1.2.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "mocha": "8.4.0",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
