--- a/packages/provider/packages/core/package.json
+++ b/packages/provider/packages/core/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "main": "index.js",
   "type": "module",
+  "scripts": {
+    "build": "yarn tsc -b --verbose"
+  },
   "dependencies": {
     "@prosopo/contract": "workspace:*",
     "@redspot/chai": "file:../../../redspot/build/redspot-chai",
@@ -16,17 +19,17 @@
     "@redspot/watcher": "file:../../../redspot/build/redspot-watcher",
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
-    "chai-as-promised": "^7.1.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
     "redspot": "file:../../../redspot/build/redspot-core",
-    "ts-node": "^10.0.0",
     "zod": "^3.11.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.0.6",
     "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.13",
+    "@types/find-up": "^4.0.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -37,11 +40,20 @@
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import-newlines": "^1.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "mocha": "8.4.0"
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "mocha": "8.4.0",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
   "files": [
     "./redspot.config.ts",
