--- a/packages/provider/packages/core/package.json
+++ b/packages/provider/packages/core/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "@prosopo/contract": "workspace:*",
-    "@redspot/chai": "file:../../../redspot/build/redspot-chai",
-    "@redspot/decimals": "file:../../../redspot/build/redspot-decimals",
-    "@redspot/explorer": "file:../../../redspot/build/redspot-explorer",
-    "@redspot/gas-reporter": "file:../../../redspot/build/redspot-gas-reporter",
-    "@redspot/known-types": "file:../../../redspot/build/redspot-known-types",
-    "@redspot/patract": "file:../../../redspot/build/redspot-patract",
-    "@redspot/watcher": "file:../../../redspot/build/redspot-watcher",
+    "@redspot/chai": "file:../../../../redspot/build/redspot-chai",
+    "@redspot/decimals": "file:../../../../redspot/build/redspot-decimals",
+    "@redspot/explorer": "file:../../../../redspot/build/redspot-explorer",
+    "@redspot/gas-reporter": "file:../../../../redspot/build/redspot-gas-reporter",
+    "@redspot/known-types": "file:../../../../redspot/build/redspot-known-types",
+    "@redspot/patract": "file:../../../../redspot/build/redspot-patract",
+    "@redspot/watcher": "file:../../../../redspot/build/redspot-watcher",
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
-    "redspot": "file:../../../redspot/build/redspot-core",
+    "redspot": "file:../../../../redspot/build/redspot-core",
     "zod": "^3.11.6"
   },
   "devDependencies": {
