--- a/packages/provider/packages/contract/tsconfig.json
+++ b/packages/provider/packages/contract/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-
   "compilerOptions": {
     "baseUrl": "..",
     "outDir": "./build",
@@ -12,7 +11,5 @@
   "include": [
     "src"
   ],
-  "references": [
-
-  ]
+  "references": []
 }
