--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -25,9 +25,12 @@
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
     "chai-as-promised": "^7.1.1",
+    "cron": "^1.8.2",
+    "cron-parser": "^4.2.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
+    "pm2": "^5.1.2",
     "redspot": "file:../redspot/build/redspot-core",
     "ts-node": "^10.0.0",
     "typescript": "^4.5.4",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/cron": "^1.7.3",
     "@types/node": "^17.0.8",
     "chai": "^4.3.4",
     "dotenv": "^14.3.2",
