--- a/packages/provider/.gitignore
+++ b/packages/provider/.gitignore
@@ -1,29 +1,12 @@
-# Ignore build artifacts from the local tests sub-crate.
-/target/
-/core/target/
-/model/target/
-/lang/target/
-/primitives/target/
-/examples/**/target/
-/design/
-/artifacts
-
-
-# Ignore backup files creates by cargo fmt.
-**/*.rs.bk
-
-# Remove Cargo.lock when creating an executable, leave it for libraries
-# More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
-Cargo.lock
-
-# Ignore history files.
-**/.history/**
-
 node_modules
-**/node_modules
+**/node_modules**/
 /.idea
+/.vscode
+.yarn
 *.tsbuildinfo
 .DS_Store
+mongodb
+env
 
 # Below is Github's node gitignore template,
 # ignoring the node_modules part, as it'd ignore every node_modules, and we have some for testing
@@ -110,7 +93,6 @@ typings/
 .dynamodb/
 
 build/
-**/build
 
 /.yarn/cache
 # This is the Yarn build state; it's local to each clone
@@ -121,3 +103,6 @@ build/
 
 secrets.json
 .env
+
+# Ingnore build target
+contracts/target/
