--- a/packages/provider/packages/contract/tsconfig.json
+++ b/packages/provider/packages/contract/tsconfig.json
@@ -23,8 +23,9 @@
     "baseUrl": ".",
     "composite": true
   },
+  "baseUrl": ".",
   "include": [
-    "packages/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
