--- a/packages/provider/packages/core/package.json
+++ b/packages/provider/packages/core/package.json
@@ -2,11 +2,17 @@
   "name": "@prosopo/provider-core",
   "version": "0.0.0",
   "author": "Prosopo",
-  "private": true,
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "yarn tsc -b . --verbose"
+    "build": "yarn tsc -b . --verbose",
+    "dev": "yarn build && yarn setup && yarn start",
+    "start": "ts-node ./src/cli/cli.ts",
+    "setup": "yarn ts-node ./build/scripts/setupdev.js",
+    "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
+    "test": "yarn redspot test",
+    "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "dependencies": {
     "@prosopo/contract": "workspace:*",
